--- a/src/app/pages/@trello/manage-projects/manage-project/manage-project.component.html
+++ b/src/app/pages/@trello/manage-projects/manage-project/manage-project.component.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-xl-6">
               <input class="form-control" type="number" formControlName="expiryQuantity">
-              <small> 0 sync project every page load </small>
+              <small> 0 sync projects every page load </small>
             </div>
 
             <div class="col-xl-6">
