--- a/src/app/pages/@trello/manage-projects/manage-projects.component.html
+++ b/src/app/pages/@trello/manage-projects/manage-projects.component.html
@@ -23,7 +23,7 @@
           <div class="row">
             <div class="col-xl-12">
 
-              <ng-container *ngIf="trelloViewer.trelloProjects.length !== 0; else noProjects">
+              <ng-container *ngIf="trelloViewer.getTrelloProjects().length !== 0; else noProjects">
                 <div class="searchArea">
                   <div class="input-group">
                     <input class="form-control" placeholder="Project Name" [(ngModel)]="projectNameSearch" ng-model-options="{debounce: 100}">
@@ -49,7 +49,7 @@
                         </thead>
 
                         <tbody>
-                          <tr *ngFor="let aTrelloProject of trelloViewer.trelloProjects | trelloProjectFilter: projectNameSearch; index as i">
+                          <tr *ngFor="let aTrelloProject of trelloViewer.getTrelloProjects() | trelloProjectFilter: projectNameSearch; index as i">
                             <td> {{aTrelloProject.projectName}} </td>
                             <td> {{aTrelloProject.expiryDate | date: 'dd MMMM yyyy'}} </td>
                             <td>
