--- a/src/app/pages/@trello/overview/overview.component.scss
+++ b/src/app/pages/@trello/overview/overview.component.scss
@@ -6,7 +6,7 @@
   .label {
     padding: 3px 10px;
     line-height: 13px;
-    color: #ffffff;
+    color: color(theme, text-white);
     border-radius: 4px;
     font-size: 14px;
 
