--- a/src/app/pages/@trello/shared/trello-card/trello-card.component.html
+++ b/src/app/pages/@trello/shared/trello-card/trello-card.component.html
@@ -6,7 +6,7 @@
 
         <button class="btn" (click)="trelloViewer.syncTrelloProjects()">
           <i class="fas fa-sync"></i>
-          Sync
+          Sync Project
         </button>
       </card-tools>
 
