--- a/src/app/@theme/assets/scss/theme.scss
+++ b/src/app/@theme/assets/scss/theme.scss
@@ -16,8 +16,8 @@ body {
   font-family: 'poppins-regular', sans-serif;
   font-size: 15px;
 
-  color: #67757c;
-  background: #eef5f9;
+  color: color(theme, text-paragraph);
+  background: color(theme, backdrop);
 }
 
 h1,
@@ -26,7 +26,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #455a64;
+  color: color(theme, text-heading);
   font-family: 'poppins-regular', sans-serif;
 }
 
