--- a/src/app/@theme/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/@theme/components/breadcrumb/breadcrumb.component.scss
@@ -1,3 +1,5 @@
+@import "~src/app/@theme/assets/scss/theme-colour.scss";
+
 .breadcrumb {
   padding: 3px 0 0 0;
   background: transparent;
@@ -9,13 +11,13 @@
     margin: 0;
 
     a {
-      color: #007bff;
+      font-weight: 500;
+      color: color(theme, primary-light);
       text-decoration: none;
-      background-color: transparent;
     }
 
-    .active {
-      color: #99abb4;
+    &:last-child {
+      color: color(theme, text-heading);
     }
   }
 
