--- a/src/app/pages/invalid-path/invalid-path.component.html
+++ b/src/app/pages/invalid-path/invalid-path.component.html
@@ -3,6 +3,6 @@
     <h1> Oops! </h1>
     <h2> 404 - Page not found </h2>
 
-    <button type="button" class="btn" routerLink="/"> Go Home </button>
+    <button type="button" class="btn btn-primary" routerLink="/"> Go Home </button>
   </div>
 </div>
