Fix incorrect method name for sync all projects

--- a/src/app/pages/@trello/shared/trello-card/trello-card.component.html
+++ b/src/app/pages/@trello/shared/trello-card/trello-card.component.html
@@ -4,7 +4,7 @@
       <card-tools>
         <ng-content select=".header"></ng-content>
 
-        <button class="btn" (click)="trelloViewer.syncTrelloProjects()">
+        <button class="btn" (click)="trelloViewer.syncAllProjects()">
           <i class="fas fa-sync"></i>
           Sync Project
         </button>
