Update Trello Page Names

--- a/src/app/pages/@trello/projects/projects.component.html
+++ b/src/app/pages/@trello/projects/projects.component.html
@@ -85,6 +85,6 @@
   </div>
 </div>
 
-<trello-manage-project [projectIndex]="projectIndex" [trelloForm]="trelloForm" [trelloViewer]="trelloViewer"></trello-manage-project>
+<trello-project [projectIndex]="projectIndex" [trelloForm]="trelloForm" [trelloViewer]="trelloViewer"></trello-project>
 
 <confirmation-modal modalId="confirmationModal" (modalChoice)="confirmRemoveTrelloProject($event)"></confirmation-modal>
