--- a/src/app/pages/@trello/queries/queries.component.html
+++ b/src/app/pages/@trello/queries/queries.component.html
@@ -30,7 +30,7 @@
       <div class="body">
         <div class="searchArea">
           <div class="input-group">
-            <input class="form-control" placeholder="Card Search" [(ngModel)]="cardSearch" ng-model-options="{debounce: 100}">
+            <input class="form-control" placeholder="Visable Card Search" [(ngModel)]="cardSearch" ng-model-options="{debounce: 100}">
 
             <div class="input-group-append">
               <button class="btn btn-primary">
@@ -54,7 +54,7 @@
                   </thead>
 
                   <tbody>
-                    <ng-container *ngFor="let aTrelloProject of trelloViewer.getTrelloProjects()">
+                    <ng-container *ngFor="let aTrelloProject of trelloViewer.getTrelloProjects() | slice : 0 : viewProjectsLength; let i = index;">
                       <tr *ngFor="let aTrelloCard of aTrelloProject.trelloCards | trelloCardFilter: { 'filter': cardSearch, 'columns': displayColumns }">
 
                         <ng-container *ngFor="let aCardField of trelloCardFields; let i = index">
@@ -103,4 +103,6 @@
       </div>
     </trello-card>
   </div>
+
+  <div infiniteScroll [infiniteScrollDistance] = "2" [infiniteScrollThrottle] = "50" (scrolled) = "onScroll()"> </div>
 </div>
