--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -25,7 +25,7 @@
   <div class="col-xl-6">
     <card class="project">
 
-      <a routerLink="/trello/manage">
+      <a routerLink="/trello/projects">
         <card-body>
           <div class="row">
             <div class="col-xl-3">
