Improve Trello Queries Speed and Remove Infinite Scrolling

--- a/src/app/pages/@trello/queries/queries.component.html
+++ b/src/app/pages/@trello/queries/queries.component.html
@@ -54,42 +54,40 @@
                   </thead>
 
                   <tbody>
-                    <ng-container *ngFor="let aTrelloProject of trelloViewer.getTrelloProjects() | slice : 0 : viewProjectsLength; let i = index;">
-                      <tr *ngFor="let aTrelloCard of aTrelloProject.trelloCards | trelloCardFilter: { 'filter': cardSearch, 'columns': displayColumns }">
+                    <tr *ngFor="let aTrelloCard of trelloViewer.getTrelloCards() | trelloCardFilter: { 'filter': cardSearch, 'columns': displayColumns }">
 
-                        <ng-container *ngFor="let aCardField of trelloCardFields; let i = index">
-                          <ng-container *ngIf="displayColumns[i]">
+                      <ng-container *ngFor="let aCardField of trelloCardFields; let i = index">
+                        <ng-container *ngIf="displayColumns[i]">
 
-                            <td *ngIf="i == 0"> {{aTrelloProject.projectName}} </td>
-                            <td *ngIf="i == 1"> {{aTrelloCard.cardBoardName}} </td>
-                            <td *ngIf="i == 2"> {{aTrelloCard.cardName}} </td>
-                            <td *ngIf="i == 3"> {{aTrelloCard.cardDescription}} </td>
+                          <td *ngIf="i == 0"> {{aTrelloCard.projectName}} </td>
+                          <td *ngIf="i == 1"> {{aTrelloCard.cardBoardName}} </td>
+                          <td *ngIf="i == 2"> {{aTrelloCard.cardName}} </td>
+                          <td *ngIf="i == 3"> {{aTrelloCard.cardDescription}} </td>
 
-                            <td *ngIf="i == 4">
-                              <span class="label" *ngFor="let aCard of aTrelloCard.cardLabels" [style.background-color]="aCard.labelColour"> {{aCard.labelName}} </span>
-                            </td>
+                          <td *ngIf="i == 4">
+                            <span class="label" *ngFor="let aCard of aTrelloCard.cardLabels" [style.background-color]="aCard.labelColour"> {{aCard.labelName}} </span>
+                          </td>
 
-                            <td *ngIf="i == 5">
-                              <div class="row progressColumn">
-                                <div class="col-xl-7">
-                                  <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" [style.width]="aTrelloCard.cardPercentage + '%'" [attr.aria-valuenow]="aTrelloCard.cardPercentage"></div>
-                                  </div>
-                                </div>
-
-                                <div class="col-xl-5 text-center">
-                                  {{aTrelloCard.cardPercentage}}%
+                          <td *ngIf="i == 5">
+                            <div class="row progressColumn">
+                              <div class="col-xl-7">
+                                <div class="progress">
+                                  <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" [style.width]="aTrelloCard.cardPercentage + '%'" [attr.aria-valuenow]="aTrelloCard.cardPercentage"></div>
                                 </div>
                               </div>
-                            </td>
 
-                            <td *ngIf="i > 5"> {{aTrelloCard.cardCustomFields[i - 6].fieldValue}} </td>
+                              <div class="col-xl-5 text-center">
+                                {{aTrelloCard.cardPercentage}}%
+                              </div>
+                            </div>
+                          </td>
 
-                          </ng-container>
+                          <td *ngIf="i > 5"> {{aTrelloCard.cardCustomFields[i - 6].fieldValue}} </td>
+
                         </ng-container>
+                      </ng-container>
 
-                      </tr>
-                    </ng-container>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -103,6 +101,4 @@
       </div>
     </trello-card>
   </div>
-
-  <div infiniteScroll [infiniteScrollDistance] = "2" [infiniteScrollThrottle] = "50" (scrolled) = "onScroll()"> </div>
 </div>
