Update Trello Queries Search Text

--- a/src/app/pages/@trello/queries/queries.component.html
+++ b/src/app/pages/@trello/queries/queries.component.html
@@ -30,7 +30,7 @@
       <div class="body">
         <div class="searchArea">
           <div class="input-group">
-            <input class="form-control" placeholder="Visable Card Search" [(ngModel)]="cardSearch" ng-model-options="{debounce: 100}">
+            <input class="form-control" placeholder="Card Search" [(ngModel)]="cardSearch" ng-model-options="{debounce: 100}">
 
             <div class="input-group-append">
               <button class="btn btn-primary">
