Fix Small Scroll Issue in Trello Queries

--- a/src/app/pages/@trello/queries/queries.component.scss
+++ b/src/app/pages/@trello/queries/queries.component.scss
@@ -16,9 +16,8 @@
   }
 
   .progressColumn {
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-left: 0;
+    margin-right: 0;
 
     .col-xl-5,
     .col-xl-7 {
